fixed a few other sonar issue